gallery responsiveness, fixed about responsivness on small screen

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -81,6 +81,8 @@ html, body {
   }
 
   &__offer {
+  
+    min-width: 270px;
     grid-area: offer;
     justify-self: center;
     margin: 6vh 1rem auto auto;
@@ -164,9 +166,11 @@ html, body {
       grid-template-columns: auto auto auto;
     }
     @media (max-width: 768px) {
+      row-gap: 1rem;
+      column-gap: 1rem;
       grid-template-columns: auto auto;
     }
-    @media (max-width: 360px) {
+    @media (max-width: 450px) {
       grid-template-columns: auto;
     }
     
@@ -221,6 +225,7 @@ html, body {
 
   .footer {
     height: 10vh;
+    max-height: 5rem;
     background-color: $footer-bg-color;
     display: flex;
     flex-wrap: wrap;
